Separated deployment functionality