@@ -1,15 +1,14 @@
 package com.omgservers.service.shard.matchmaker.impl.operation.matchmakerMatchAssignment;
 
 import com.omgservers.schema.model.matchmakerMatchAssignment.MatchmakerMatchAssignmentModel;
-import com.omgservers.service.shard.matchmaker.impl.mappers.MatchmakerMatchAssignmentModelMapper;
 import com.omgservers.service.operation.server.SelectListOperation;
+import com.omgservers.service.shard.matchmaker.impl.mappers.MatchmakerMatchAssignmentModelMapper;
 import io.smallrye.mutiny.Uni;
 import io.vertx.mutiny.sqlclient.SqlConnection;
 import jakarta.enterprise.context.ApplicationScoped;
 import lombok.AllArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 
-import java.util.Collections;
 import java.util.List;
 
 @Slf4j
@@ -31,13 +30,13 @@ class SelectActiveMatchmakerMatchAssignmentsByMatchmakerIdOperationImpl
                 shard,
                 """
                         select
-                            id, idempotency_key, matchmaker_id, match_id, created, modified, user_id, client_id, 
-                            group_name, config, deleted
+                            id, idempotency_key, matchmaker_id, created, modified, match_id, client_id, group_name,
+                            config, deleted
                         from $schema.tab_matchmaker_match_assignment
                         where matchmaker_id = $1 and deleted = false
                         order by id asc
                         """,
-                Collections.singletonList(matchmakerId),
+                List.of(matchmakerId),
                 "Matchmaker match assignment",
                 matchmakerMatchAssignmentModelMapper::execute);
     }
