@@ -1,15 +1,14 @@
 package com.omgservers.service.shard.runtime.impl.operation.runtimeCommand;
 
 import com.omgservers.schema.model.runtimeCommand.RuntimeCommandModel;
-import com.omgservers.service.shard.runtime.impl.mapper.RuntimeCommandModelMapper;
 import com.omgservers.service.operation.server.SelectListOperation;
+import com.omgservers.service.shard.runtime.impl.mapper.RuntimeCommandModelMapper;
 import io.smallrye.mutiny.Uni;
 import io.vertx.mutiny.sqlclient.SqlConnection;
 import jakarta.enterprise.context.ApplicationScoped;
 import lombok.AllArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 
-import java.util.Collections;
 import java.util.List;
 
 @Slf4j
@@ -30,12 +29,13 @@ class SelectActiveRuntimeCommandsByRuntimeIdOperationImpl
                 sqlConnection,
                 shard,
                 """
-                        select id, idempotency_key, runtime_id, created, modified, qualifier, body, deleted
+                        select
+                            id, idempotency_key, runtime_id, created, modified, qualifier, body, deleted
                         from $schema.tab_runtime_command
                         where runtime_id = $1 and deleted = false
                         order by id asc
                         """,
-                Collections.singletonList(runtimeId),
+                List.of(runtimeId),
                 "Runtime command",
                 runtimeCommandModelMapper::execute);
     }
